# deeznt-code

./: .gitignore  CMakeLists.txt  Deezn't Code.pck  Deeznt Code.png.import  README.md  SConstruct  cmdhost.gdextension  code_edit.gd  code_edit.gd.uid  editor.gd.uid  export_presets.cfg  file_manager.tscn  highlighter.gd  icon.svg.import  intro.gd.uid  intro.tscn  intro.wav.import  main.cpp  main.gd  main.gd.uid  main.h  main.tscn  main.tscn1940546677.tmp  main.tscn2688772195.tmp  main.tscn3349013918.tmp  main.tscn3736310436.tmp  project.godot  register_types.cpp  register_types.h  register_types.os
.godot/: extension_list.cfg  global_script_class_cache.cfg
Console Extension/: main.cpp
Font/: FiraCodeNerdFont-Regular.ttf.import  Inconsolata-Regular.ttf.import
Images/: function.png.import  import.png.import  keyword.png.import  variable.png.import
langs/: cpp.lua  python.lua
music/: intro.wav.import
scripts/: apply_button.gd  apply_button.gd.uid  check_box_button.gd  check_box_button.gd.uid  code_edit.gd  control.gd.uid  edit.gd  editor_container.gd  editor_container.gd.uid  editor_settings.gd  editor_settings.gd.uid  find_replace_window.gd  find_replace_window.gd.uid  highlighter.gd.uid  icons.gd  icons.gd.uid  intro.gd  intro_window.gd  intro_window.gd.uid  main.gd  main.tscn  never_show_again_button.gd  never_show_again_button.gd.uid  save_to_file.gd  save_to_file.gd.uid  savetimedelayslider.gd  savetimedelayslider.gd.uid  setting_slider.gd  setting_slider.gd.uid  settings.gd  settings.gd.uid  settings_manager.gd  terminal.gd  terminal.gd.uid  theme_select.gd  (+5 more)
(+72 files in other folders)
